# server_rs

./: .editorconfig  AGENTS.md  Cargo.toml  Dockerfile  README.md
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/server_rs_http/: Cargo.toml
crates/server_rs_http/src/: handler.rs  header.rs  lib.rs  request.rs  response.rs
crates/server_rs_tcp/: Cargo.toml
crates/server_rs_tcp/src/: lib.rs
crates/server_rs_tcp/src/process/: echo.rs  mod.rs
crates/server_rs_tcp/src/server/: mod.rs  tcp_worker.rs
crates/server_rs_worker/: Cargo.toml
crates/server_rs_worker/src/: group.rs  helper.rs  manager.rs
crates/util/: Cargo.toml
crates/util/src/: date.rs
src/: args.rs  handler.rs  main.rs  runner.rs  server.rs  worker.rs
src/http/: handler.rs  header.rs  http.rs  mod.rs  request.rs  response.rs  value.rs
src/process/: echo.rs  echo_process.rs  mod.rs  process.rs
src/server/: mod.rs  worker.rs
src/util/: date.rs
src/worker/: error.rs  group.rs  helper.rs  manager.rs  mod.rs  worker.rs
