[package]
name = "server_rs"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colog = "1.3.0"
env_logger = "0.11.8"
log = "0.4.27"
nix = { version = "0.30.1", features = ["process", "signal", "ucontext", "time", "event", "net"]}
rand = "0.9.2"
